chore: try file layout

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,15 @@
 # Introduction
- 
+
+可以用作首页
+
+```json
+{
+  "theme": {
+    "layout": "raw"
+  }
+}
+```
+
 Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
 ## What is Nextra?
